Back to what I lost. Now making it pretty

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html class=" js no-flexbox flexbox-legacy canvas rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio" lang="en">
 
   {% include head.html %}
 
-  <body>
+
+  <body class="permalink">
+  	{% include header.html %}
 
 
 
-    <div class="content container">
-      {{ content }}
-    </div>
+    <section class="the-posts" style="padding: 0px">
 
-  </body>
-</html>
+
+
+	<div class="posts-holder">
+   
+		<article id="" class="type_text " rel="http://www.tumblr.com/reblog//TmN3ujDJ">
+
+			<div class="article-content">
+
+
+
+			<!-- Text Post -->
+
+
+			<div class="inner-wrap">
+
+				
+				<h2><a href="" style="color:#C73122"title="Gallery">ANNOUNCEMENTS</a></h2>
+				
+
+				<div class="content container">
+      				{{ content }}
+   				</div>
+
+
+			</div>
+
+			</div>
+	 	 	   
+
+		</article>
+
+	</div>
+
+
+	</section>
+
+
+	{% include assets.html %}
+</body></html>
