--- a/_includes/head.html
+++ b/_includes/head.html
@@ -122,7 +122,7 @@
       color: #2c3e50;
     }
 
-    h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
+    h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {
       color: #7f8c8d;
     }
 
