--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 			<div class="inner-wrap">
 
 				
-				<h2><a href="" style="color:#C73122"title="Gallery">ANNOUNCEMENTS</a></h2>
+				<h2><a href="" style="color:#C73122"title="Gallery">ANNOUNCEMENTS</a></h2><br><br><hr><br><br>
 				
 
 				<div class="content container">
