--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,8 @@
 	<div class="menu-switch switch_blog"><span><a class="aboutlink" href="http://stuyscioly.github.io/resources">RESOURCES</a></span></div>
 
 	<div class="menu-switch switch_blog"><span><a class="aboutlink" href="http://stuyscioly.github.io/contact">CONTACT US</a></span></div>
+	
+	<div class="menu-switch switch_blog"><span><a class = "aboutlink" href="calendar">CALENDAR</a></span></div>
 
 	<div class="the-profile">
 
