--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 
 	<div class="menu-switch switch_blog"><span><a class="aboutlink" href="http://stuyscioly.github.io/contact">CONTACT US</a></span></div>
 	
-	<div class="menu-switch switch_blog"><span><a class = "aboutlink" href="calendar">CALENDAR</a></span></div>
+	<div class="menu-switch switch_blog"><span><a class = "aboutlink" href="http://stuyscioly.github.io/calendar">CALENDAR</a></span></div>
 
 	<div class="the-profile">
 
